# openglwithndk

./: .gitignore
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/tk/datalinke/openglwithndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni-calls.cpp
app/src/main/cpp/src/: AndroidPlatform.cpp  GLHelpers.h  GLHelpersBuffer.cpp  GLHelpersShader.cpp  NativeRenderer.cpp  NativeRenderer.h  linal.h  macro.h  platform.h
app/src/main/java/tk/datalinke/openglwithndk/: GameSurfaceView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/tk/datalinke/openglwithndk/: ExampleUnitTest.java
